[project]
name = "sma44"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "session-info>=1.0.1",
]
